@@ -86,6 +86,13 @@ void Preferences::reset() {
 	vo = ""; 
 	ao = "";
 
+	// On Windows Vista set vo to gl:yuv=2:force-pbo:ati-hack as default
+#ifdef Q_OS_WIN
+	if (QSysInfo::WindowsVersion == QSysInfo::WV_VISTA) {
+		vo = "gl:yuv=2:force-pbo:ati-hack,";
+	}
+#endif
+
 #if USE_COLORKEY
 	color_key = 0x020202;
 #endif
